tests/ui/privacy/privacy-sanity.stderr
error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:13:1
   |
LL | pub impl Tr for S {
   | ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL - pub impl Tr for S {
LL +  impl Tr for S {
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:14:5
   |
LL |     pub fn f() {}
   |     ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL -     pub fn f() {}
LL +      fn f() {}
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:15:5
   |
LL |     pub const C: u8 = 0;
   |     ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL -     pub const C: u8 = 0;
LL +      const C: u8 = 0;
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:16:5
   |
LL |     pub type T = u8;
   |     ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL -     pub type T = u8;
LL +      type T = u8;
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:18:1
   |
LL | pub impl S {
   | ^^^
   |
   = note: place qualifiers on individual impl items instead
help: remove the qualifier
   |
LL - pub impl S {
LL +  impl S {
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:23:1
   |
LL | pub extern "C" {
   | ^^^
   |
   = note: place qualifiers on individual foreign items instead
help: remove the qualifier
   |
LL - pub extern "C" {
LL +  extern "C" {
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:39:5
   |
LL |     pub impl Tr for S {
   |     ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL -     pub impl Tr for S {
LL +      impl Tr for S {
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:40:9
   |
LL |         pub fn f() {}
   |         ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL -         pub fn f() {}
LL +          fn f() {}
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:41:9
   |
LL |         pub const C: u8 = 0;
   |         ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL -         pub const C: u8 = 0;
LL +          const C: u8 = 0;
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:42:9
   |
LL |         pub type T = u8;
   |         ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL -         pub type T = u8;
LL +          type T = u8;
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:44:5
   |
LL |     pub impl S {
   |     ^^^
   |
   = note: place qualifiers on individual impl items instead
help: remove the qualifier
   |
LL -     pub impl S {
LL +      impl S {
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:49:5
   |
LL |     pub extern "C" {
   |     ^^^
   |
   = note: place qualifiers on individual foreign items instead
help: remove the qualifier
   |
LL -     pub extern "C" {
LL +      extern "C" {
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:68:5
   |
LL |     pub impl Tr for S {
   |     ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL -     pub impl Tr for S {
LL +      impl Tr for S {
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:69:9
   |
LL |         pub fn f() {}
   |         ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL -         pub fn f() {}
LL +          fn f() {}
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:70:9
   |
LL |         pub const C: u8 = 0;
   |         ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL -         pub const C: u8 = 0;
LL +          const C: u8 = 0;
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:71:9
   |
LL |         pub type T = u8;
   |         ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL -         pub type T = u8;
LL +          type T = u8;
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:73:5
   |
LL |     pub impl S {
   |     ^^^
   |
   = note: place qualifiers on individual impl items instead
help: remove the qualifier
   |
LL -     pub impl S {
LL +      impl S {
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:78:5
   |
LL |     pub extern "C" {
   |     ^^^
   |
   = note: place qualifiers on individual foreign items instead
help: remove the qualifier
   |
LL -     pub extern "C" {
LL +      extern "C" {
   |

error: aborting due to 18 previous errors

For more information about this error, try `rustc --explain E0449`.
